# hopper-kb-mcp

./: .app_env_example  .gitignore  dbconnect.py  dbmodel.py  docker-compose.yml  documents.py  pyproject.toml  searchdocs.py  server.py
docker/: startup.sh
documents/: DOC1.html  DOC2.html
