[project]
name = "hopper-kb-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.26.0",
    "pyjwt>=2.12.1",
    "requests>=2.32.5",
    "starlette>=0.52.1",
]
